app/styles/main.scss
$icon-font-path: '../fonts/';
//variables
$brand-primary: #2196F3;
$brand-bg: #f5f5f5;
$brand-blue: #2196F3;
$brand-white: #fff;
$brand-black: #000000;

@mixin clearfix {
  &:before,
  &:after {
      content: ' ';
      display: table;
  }
  &:after {
      clear: both;
  }
}

// bower:scss
@import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
// endbower

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

html,
body {
  height: auto;
  width: 100%;
  background: $brand-primary;
  overflow-x: hidden;
}

.index-bg {
  background-color: $brand-primary;
  width: 100%;
  height: 100%;
}

.index-bg-img {
  background-color: $brand-primary;
  background-image: url(../images/PhotoBG.png);
  background-size: cover;
  width: 100%;
  height: 100%;
}

.menu-container .menu-container-menu img.back-btn {
  padding: 0 0 0 10px;
}

/*Form styling*/
.group        { 
  position:relative; 
  margin-bottom:10px; 

  input {
    background-color: $brand-primary;
    color: white;
  }
}

input {
  font-size:18px;
  padding:10px 10px 5px 5px;
  display:block;
  width:100%;
  border:none;
  border-bottom:2px solid rgba(255,255,255,.5);
}

input:focus { 
  outline:none; 
  border-bottom:2px solid white;
}

input::-webkit-input-placeholder {
   color: rgba(255,255,255,.5);
   font-size: 14px;
}

/* LABEL ======================================= */
label {
  color: rgba(255,255,255,.5); 
  font-size:14px;
  font-weight:normal;
  position:absolute;
  pointer-events:none;
  left:5px;
  top:10px;
}

/* active state */
input:focus ~ label, input:valid ~ label    {
  display: none;
}

/* BOTTOM BARS ================================= */
.bar { 
  position:relative; 
  display:block; 
  width:300px; 
}

.bar:before {
  left:50%;
}

.bar:after {
  right:50%; 
}

/* HIGHLIGHTER ================================== */
.highlight {
  position:absolute;
  height:60%; 
  width:100px; 
  top:25%; 
  left:0;
  pointer-events:none;
  opacity:0.5;
}

/* active state */
input:focus ~ .highlight {
  -webkit-animation:inputHighlighter 0.3s ease;
  -moz-animation:inputHighlighter 0.3s ease;
  animation:inputHighlighter 0.3s ease;
}

.list-bg {
  background-color: $brand-bg;
  width: 100%;
  height: 100%;
}

.btn-outline {
  background-color: transparent;
  border: 1px solid white;
  color: white;
  border-radius: 10px;
  margin-bottom: 5px;
  padding: 10px 28px;
  width: 100%;
  font-size: 22px;
}

.btn-fill {
  background-color: white;
  border: 1px solid $brand-white;
  color: $brand-primary;
  border-radius: 5px;
  margin-bottom: 5px;
  width: 100%;
}

.splash-logo {
  text-align: center;
  margin-top: 50%;
}

.splash-logo-top {
  text-align: center;
  margin-top: 10%;
  margin-bottom: 10%;
}

.splash-btns {
  position: fixed;
  bottom: 0;
  width: 100%;
  left: 0;
  padding: 0 3%;
  margin-bottom: 50px;
}

.splash-text {
  text-align: center;
  margin-top: 20px;
  color: $brand-white;
  font-family: 'Roboto', sans-serif;
}

.list-panel {
  @include clearfix;
  background-color: $brand-white;
  margin: 12px 5px;
}

.list-white-panel {
  background-color: $brand-white;
  margin: 0 5px;
  border-bottom-width: 17px;
}

.list-group-item {
  background-color: $brand-white;
  padding-bottom: 40px;
}

.panel-white {
  @include clearfix;
   background-color: $brand-white;
   margin: 0;
   color: $brand-blue;
   text-align: center;
}

.list-panel {
  margin: 5px 2px;
  padding: 20px 10px 10px;
}

.well-text {
  @include clearfix;
  font-size: 10px;
  float: left;
  line-height: 0.7em;
  width: 80%;

  .deadline {
    color: #969696;
  }
  .amount {
    color: $brand-blue;
  }
}

.favorite {
  text-align: center;
  float: right;
  width: 15%;

  img {
    width: 25px;
    height: 20px;
    margin-top: 10px;
  }
}

input[type='radio'] {
    -webkit-appearance:none;
    width:20px;
    height:20px;
    border:1px solid darkgray;
    border-radius:50%;
    outline:none;
    box-shadow:0 0 5px 0px gray inset;
}
input[type='radio']:hover {
    box-shadow:0 0 5px 0px $brand-blue inset;
}
input[type='radio']:before {
    content:'';
    display:block;
    width:60%;
    height:60%;
    margin: 20% auto;    
    border-radius:50%;    
}
input[type='radio']:checked:before {
    background: $brand-blue;
}

.container-grey {
  background-color: $brand-bg;
  padding-left: 0px;
  padding-right: 0px;
  height: 100%;
}

.item-info {
  position: relative;
  padding-left: 18px;
  padding-right: 18px;
  height: 100%;

  p {
    color: black;
    margin: 0;
  }

}

.item-info-description {
  position: relative;
  padding-left: 18px;
  padding-right: 18px;
  height: 570px;

  p {
    color: black;
    margin: 0;
  }

}

.item-btn {
  position: absolute;
  padding-right: 18px;
  width: 100%;
}

.item-icon {
  height: 100%;
  padding-top: 7%;

  img {
    padding-right: 10px;
    width: 80%;
  }
}

.menu-container {
  background-color: $brand-primary;
  height: 50px;
  padding: 10px;
  text-align: justify;
  position: relative;

  .menu-container-menu {
    text-align: center;
    width: 25%;
    float: left;

    p {
      color: $brand-white;
      padding-left: 10px;
    }

    img {
      height: 22px;
      padding: 5px 55px 0 1px;
    }
  }

  .menu-container-logo {
    text-align: center;
    width: 55%;
    float: left;

    img {
      height: 30px;
    }
  }
}

.menu-container-img-left {
    text-align: left;
}

.menu-container-img-center {
  margin-left: auto;
  margin-right: auto;
  width: 8em;
}


.menu-left {
  float: left;
  width: 95%;
}

.menu-right {
  float:right;
  width: 5%;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;

  /* Make the masthead heading the same height as the navigation */
  h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
  }
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
  .btn {
    font-size: 21px;
    padding: 14px 24px;
  }
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
  p + h4 {
    margin-top: 28px;
  }
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    max-width: 730px;
  }

  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }

  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }

  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

/*pushy*/
.pushy {
  background-color: $brand-blue;

  ul {
    padding: 0;
  }

  li {
    border-bottom: 2px solid #6699ff;
    list-style: none;
  }

  li:first-of-type {
    padding-top: 10px;
    background-color: #1769AA;
  }

  a {
    border-bottom: 0px solid #6699ff;
    color: white;
  }
}

